flux/production/admissionregistration.k8s.io-v1-ValidatingWebhookConfiguration-karpenter-validation.webhook.config.karpenter.sh.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/instance: karpenter
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: karpenter
    app.kubernetes.io/version: 0.17.0
    helm.sh/chart: karpenter-v0.17.0
  name: validation.webhook.config.karpenter.sh
  namespace: karpenter
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: karpenter
      namespace: karpenter
  failurePolicy: Fail
  name: validation.webhook.config.karpenter.sh
  objectSelector:
    matchLabels:
      app.kubernetes.io/part-of: karpenter
  sideEffects: None
